--- a/main.css
+++ b/main.css
@@ -4,5 +4,11 @@
 
 body {
   margin:0;
-  background-color: #1c2b44;
+}
+
+.main{
+  background-color: #213350;
+  display: flex;
+  width: 100vh;
+  height:100%;
 }
