--- a/main.css
+++ b/main.css
@@ -4,11 +4,12 @@
 
 body {
   margin:0;
+  background-color: #213350;
 }
 
 .main{
   background-color: #213350;
   display: flex;
-  width: 100vh;
+  width: 100%;
   height:100%;
 }
