--- a/main.css
+++ b/main.css
@@ -13,3 +13,13 @@ body {
   width: 100%;
   height:100%;
 }
+
+.head {
+  background-color: rgb(85, 103, 131);
+  width: 250px;
+  height: 280px;
+  left: 550px;
+  bottom: 40%;
+  position: fixed;
+  border-radius: 185px 185px 180px 180px
+  }
