--- a/main.css
+++ b/main.css
@@ -21,5 +21,5 @@ body {
   left: 550px;
   bottom: 40%;
   position: fixed;
-  border-radius: 185px 185px 180px 180px
+  border-radius: 185px 185px 180px 180px;
   }
