--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
   background-color: #213350;
 }
 
-.main{
+.main {
   background-color: #213350;
   display: flex;
   width: 100%;
@@ -20,6 +20,6 @@ body {
   height: 280px;
   left: 550px;
   bottom: 40%;
-  position: fixed;
-  border-radius: 185px 185px 180px 180px;
+  position: absolute;
+  border-radius: 85px 85px 180px 180px;
   }
