--- a/main.css
+++ b/main.css
@@ -22,4 +22,14 @@ body {
   bottom: 40%;
   position: absolute;
   border-radius: 85px 85px 180px 180px;
+  z-index: 2;
   }
+
+.text {
+  width:500px;
+  height:200px;
+  align-self: center;
+  position: absolute;
+  z-index: 3;
+  color:white;
+}
