--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ body {
 .main {
   background-color: #213350;
   display: flex;
+  align-content: center;
   width: 100%;
   height:100%;
 }
@@ -28,7 +29,6 @@ body {
 .text {
   width:500px;
   height:200px;
-  align-self: center;
   position: absolute;
   z-index: 3;
   color:white;
