--- a/main.css
+++ b/main.css
@@ -18,18 +18,53 @@ body {
 .head {
   background-color: rgb(85, 103, 131);
   width: 250px;
-  height: 280px;
-  left: 550px;
-  bottom: 40%;
+  height: 330px;
+  left: 40%;
+  bottom: 30%;
+  display: flex;
   position: absolute;
-  border-radius: 85px 85px 180px 180px;
+  border-radius: 165px 165px 180px 180px;
   z-index: 2;
   }
 
+.next-button {
+  width:30px;
+  height:30px;
+  background-color: white;
+  top: 50px;
+}
+
+
+
 .text {
   width:500px;
-  height:200px;
+  height:70px;
   position: absolute;
   z-index: 3;
   color:white;
+  top:70px;
+  left:34%;
+  font-size: 50px;
+}
+
+.text2 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:white;
+  top:300px;
+  left:20%;
+  font-size: 50px;
+}
+
+.text3 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:white;
+  top:300px;
+  left:65%;
+  font-size: 50px;
 }
