--- a/main2.css
+++ b/main2.css
@@ -15,29 +15,6 @@ body {
   height:100%;
 }
 
-.head {
-  background-color: rgb(85, 103, 131);
-  width: 250px;
-  height: 330px;
-  left: 40%;
-  bottom: 30%;
-  display: flex;
-  position: absolute;
-  border-radius: 165px 165px 180px 180px;
-  z-index: 2;
-  }
-
-.next-button {
-  width:60px;
-  height:30px;
-  background-color: white;
-  top: 105px;
-  left:90px;
-  position: absolute;
-}
-
-
-
 .text {
   width:500px;
   height:70px;
@@ -55,8 +32,8 @@ body {
   position: absolute;
   z-index: 3;
   color:white;
-  top:300px;
-  left:20%;
+  top:265px;
+  left:34%;
   font-size: 50px;
 }
 
@@ -66,7 +43,16 @@ body {
   position: absolute;
   z-index: 3;
   color:white;
-  top:300px;
-  left:65%;
+  top:400px;
+  left:34%;
   font-size: 50px;
+}
+
+.next-button {
+  width:60px;
+  height:30px;
+  background-color: white;
+  bottom: 105px;
+  left:50%;
+  position: absolute;
 }
