--- a/main.css
+++ b/main.css
@@ -4,11 +4,16 @@
 
 body {
   margin:0;
-  background-color: #213350;
+  font-family: 'New Tegomin', serif;
+}
+
+img {
+  z-index: 2;
+  left:50px;
 }
 
 .main {
-  background-color: #213350;
+  background-color: #1c2b44;
   display: flex;
   align-content: center;
   width: 100%;
@@ -27,13 +32,13 @@ body {
 
 
 .text {
-  width:500px;
+  width:600px;
   height:70px;
   position: absolute;
   z-index: 3;
   color:white;
   top:70px;
-  left:34%;
+  left:30%;
   font-size: 50px;
 }
 
@@ -44,7 +49,7 @@ body {
   z-index: 3;
   color:white;
   top:300px;
-  left:20%;
+  left:15%;
   font-size: 50px;
 }
 
