--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 
 img {
   z-index: 2;
-  left:50px;
+  align-self: center;
 }
 
 .main {
@@ -23,10 +23,32 @@ img {
 .next-button {
   width:60px;
   height:30px;
-  background-color: white;
-  top: 105px;
-  left:90px;
+  color: #c9cfd8;
+  top: 282px;
+  left:639px;
   position: absolute;
+  z-index: 4;
+}
+
+a:link {
+  text-decoration: none;
+  opacity: 0;
+}
+
+a:visited {
+  text-decoration: none;
+  opacity: 0;
+}
+
+a:active {
+  text-decoration: none;
+  opacity: 0;
+}
+
+
+a:hover {
+  color: #c9cfd8;
+  opacity: 1;
 }
 
 
@@ -36,7 +58,7 @@ img {
   height:70px;
   position: absolute;
   z-index: 3;
-  color:white;
+  color:#c9cfd8;
   top:70px;
   left:30%;
   font-size: 50px;
@@ -47,7 +69,7 @@ img {
   height:70px;
   position: absolute;
   z-index: 3;
-  color:white;
+  color:#c9cfd8;
   top:300px;
   left:15%;
   font-size: 50px;
@@ -58,7 +80,7 @@ img {
   height:70px;
   position: absolute;
   z-index: 3;
-  color:white;
+  color:#c9cfd8;
   top:300px;
   left:65%;
   font-size: 50px;
