--- a/main2.css
+++ b/main2.css
@@ -8,6 +8,12 @@ body {
   font-family: 'New Tegomin', serif;
 }
 
+img {
+  position: absolute;
+  left:270px;
+  bottom: 1px;
+}
+
 .main {
   background-color: #1c2b44;
   display: flex;
@@ -22,7 +28,7 @@ body {
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  top:70px;
+  top:90px;
   left:30%;
   font-size: 50px;
   text-align: center;
@@ -59,6 +65,7 @@ body {
   left:41.5%;
   position: absolute;
   font-size: 50px;
+  z-index: 2;
 }
 
 a:link {
