--- a/main3.css
+++ b/main3.css
@@ -5,6 +5,7 @@
 body {
   margin:0;
   background-color: #1b273c;
+  font-family: 'New Tegomin', serif;
 }
 
 img {
@@ -18,4 +19,98 @@ img {
   align-content: center;
   width: 100%;
   height:100%;
+}
+
+.text {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#c9cfd8;
+  top:40px;
+  left:26%;
+  font-size: 50px;
+  text-align: center;
+}
+
+.text2 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#c9cfd8;
+  bottom:107px;
+  left:33%;
+  font-size: 50px;
+  text-align: center;
+}
+
+.text3 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#c9cfd8;
+  bottom:50%;
+  left:7.5%;
+  font-size: 30px;
+  text-align: center;
+  opacity: .2;
+}
+
+.text4 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#1b273c;
+  bottom:50%;
+  left:31.3%;
+  font-size: 30px;
+  text-align: center;
+  opacity: .2;
+}
+
+.text5 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#1b273c;
+  bottom:50%;
+  right:10%;
+  font-size: 30px;
+  text-align: center;
+  opacity: .2;
+}
+
+.next-button {
+  width:60px;
+  height:30px;
+  top: 40px;
+  right:40.3%;
+  position: absolute;
+  font-size: 50px;
+  z-index: 2;
+}
+
+a:link {
+  text-decoration: none;
+  color: #c9cfd8;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #c9cfd8;
+}
+
+a:active {
+  text-decoration: none;
+  color: #c9cfd8;
+}
+
+
+a:hover {
+  color: #0d131c;
+  opacity: 1;
 }
