--- a/hear.css
+++ b/hear.css
@@ -4,55 +4,34 @@
 
 body {
   margin:0;
+  background-color: #172134;
   font-family: 'New Tegomin', serif;
-    background-color: #1c2b44;
 }
 
 img {
-  z-index: 2;
-  align-self: center;
-  width:450px;
-}
-
-.head {
-  z-index: 1;
-  width:1400px;
-  left:10px;
-  bottom:-30px;
+  width:1220px;
+  bottom:1px;
   position: absolute;
 }
-
-.left {
-  border-radius: 50%;
-  top:30%;
-  left:13%;
-  position: absolute;
-}
-
-.right {
-  border-radius: 50%;
-  top:30%;
-  right:13%;
-  position: absolute;
-}
-
 .main {
-  background-color: #1c2b44;
+  background-color: #1b273c;
   display: flex;
+  flex-direction: column;
   align-content: center;
   width: 100%;
   height:100%;
 }
 
 .text {
-  width:600px;
+  width:500px;
   height:70px;
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  top:20px;
-  left:32%;
+  top:40px;
+  left:26%;
   font-size: 50px;
+  text-align: center;
 }
 
 .text2 {
@@ -61,7 +40,7 @@ img {
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  top:100px;
+  bottom:107px;
   left:33%;
   font-size: 50px;
   text-align: center;
@@ -73,10 +52,11 @@ img {
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  bottom:170px;
-  left:33%;
-  font-size: 50px;
+  bottom:50%;
+  left:7.5%;
+  font-size: 30px;
   text-align: center;
+  opacity: .2;
 }
 
 .text4 {
@@ -84,22 +64,35 @@ img {
   height:70px;
   position: absolute;
   z-index: 3;
-  color:#c9cfd8;
-  bottom:30px;
-  left:27.3%;
-  font-size: 50px;
+  color:#1b273c;
+  bottom:50%;
+  left:31.3%;
+  font-size: 30px;
   text-align: center;
+  opacity: .2;
+}
+
+.text5 {
+  width:500px;
+  height:70px;
+  position: absolute;
+  z-index: 3;
+  color:#1b273c;
+  bottom:50%;
+  right:10%;
+  font-size: 30px;
+  text-align: center;
+  opacity: .2;
 }
 
 .next-button {
   width:60px;
   height:30px;
-  color: #c9cfd8;
-  bottom:70px;
-  right:39%;
+  top: 40px;
+  right:40.3%;
   position: absolute;
-  z-index: 4;
   font-size: 50px;
+  z-index: 2;
 }
 
 a:link {
