--- a/hear.css
+++ b/hear.css
@@ -10,9 +10,9 @@ body {
 
 img {
   width:1220px;
-  bottom:1px;
   position: absolute;
 }
+
 .main {
   background-color: #1b273c;
   display: flex;
@@ -23,13 +23,13 @@ img {
 }
 
 .text {
-  width:500px;
+  width:800px;
   height:70px;
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  top:40px;
-  left:26%;
+  top:90px;
+  left:48%;
   font-size: 50px;
   text-align: center;
 }
@@ -40,59 +40,82 @@ img {
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  bottom:107px;
-  left:33%;
-  font-size: 50px;
+  top:197px;
+  left:58%;
+  font-size: 40px;
   text-align: center;
 }
 
 .text3 {
-  width:500px;
+  width:600px;
   height:70px;
   position: absolute;
   z-index: 3;
   color:#c9cfd8;
-  bottom:50%;
-  left:7.5%;
-  font-size: 30px;
+  bottom:48%;
+  left:54%;
+  font-size: 40px;
   text-align: center;
-  opacity: .2;
 }
 
 .text4 {
   width:500px;
-  height:70px;
+  height:120px;
   position: absolute;
   z-index: 3;
-  color:#1b273c;
-  bottom:50%;
-  left:31.3%;
+  color:#c9cfd8;
+  bottom:25%;
+  left:58%;
   font-size: 30px;
   text-align: center;
-  opacity: .2;
 }
 
 .text5 {
   width:500px;
-  height:70px;
+  height:120px;
   position: absolute;
   z-index: 3;
-  color:#1b273c;
-  bottom:50%;
-  right:10%;
+  color:#c9cfd8;
+  bottom:19%;
+  left:58%;
   font-size: 30px;
   text-align: center;
-  opacity: .2;
+}
+
+.text6 {
+  width:500px;
+  height:120px;
+  position: absolute;
+  z-index: 3;
+  color:#c9cfd8;
+  bottom:10%;
+  left:58%;
+  font-size: 40px;
+  text-align: center;
+}
+
+.text7 {
+  width:500px;
+  height:120px;
+  position: absolute;
+  z-index: 3;
+  color:#c9cfd8;
+  bottom:1%;
+  left:54.3%;
+  font-size: 30px;
+  text-align: center;
 }
 
 .next-button {
-  width:60px;
-  height:30px;
-  top: 40px;
-  right:40.3%;
+  width:500px;
+  height:120px;
   position: absolute;
-  font-size: 50px;
-  z-index: 2;
+  z-index: 3;
+  color:#c9cfd8;
+  bottom:1%;
+  left:65%;
+  font-size: 30px;
+  text-align: center;
 }
 
 a:link {
